vcs/specs/parser/fail/declarations/invalid_context_method.vr
// @test: parse-fail
// @level: L0
// @tags: parser, declarations, context, method, error
// @description: Test invalid context method syntax detection
// @expected-error: E060

context Database {
    fn;
}

context Logger {
    fn log(123);
}

context FileSystem {
    fn read() -> Text
}

context Network {
    fn connect missing_paren
}
